Sat, 01 May 2004 23:04:40 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix typo


Sat, 01 May 2004 19:11:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* change source management system to Subversion
 

Sat, 01 May 2004 14:38:04 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix bootstrap process

	* rice/irc.rb : add easy flood control

	* 0.5.3 released


Sat, 01 May 2004 14:03:52 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix typo


Sat, 01 May 2004 13:24:14 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_config.rb : add nadoka server name

	* nadokarc : fix IRCnet servers

	* 0.5.2 released


Sat, 01 May 2004 06:35:28 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_logger.rb : added

	* ndk_bot.rb : add @bot_config

	* ndk_* : use @logger instead of @config to logging

	* ndk_config.rb : extend BotConfig format

	* ndk_manager.rb, rice/irc.rb : fix reconnect process

	* some refactoring


Fri, 30 Apr 2004 02:57:46 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : ignore(and report) exception while '/nadoka reload'
	reloading


Wed, 28 Apr 2004 11:24:23 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_err.rb : change exception hierarchy

	* ndk_manager.rb : dup filtered message


Wed, 28 Apr 2004 10:31:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.5.1 released


Wed, 28 Apr 2004 02:37:34 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/shellbot.nb : remove debug print


Wed, 28 Apr 2004 02:07:06 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/evalbot.nb, plugins/shellbot.nb : added

	* ndk_bot.rb : add on_client_privmsg, on_nadoka_command

	* ndk_err.rb : add some exception class

	* ndk_manager.rb : fix some bugs


Tue, 27 Apr 2004 22:29:07 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_version.rb : added

	* ndk_manager.rb : add Privmsg_Filter, Notice_Filter


Mon, 26 Apr 2004 10:46:49 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.5.0 released


Mon, 26 Apr 2004 10:29:47 +0900  Koichi Sasada  <ko1@atdot.net>
